# embedding_api

./: .dockerignore  .env.example  .gitignore  BATCH_PROCESSING_OPTIMIZATION.md  DOCKER_DEPLOYMENT.md  Dockerfile  Dockerfile.cn  Dockerfile.cpu-nomodel  Dockerfile.cuda-runtime-nomodel  Makefile  README.md  build.py  check_gpu.py  curl_examples.sh  debug_semaphore.py  deploy.py  disable_batch.py  docker-compose.cpu-nomodel.yml  docker-compose.cpu.yml  docker-compose.cuda-nomodel.yml  docker-compose.scale.yml  docker-compose.yml  download-model.py  embedding.py  load-image-cpu-nomodel.sh  load-image-cuda-nomodel.sh  nginx.conf  package-cpu-nomodel.sh  package-cuda-nomodel.sh  pyproject.toml  request_examples.md  requirements-dev.txt  requirements.txt  setup.py  setup_env.py  setup_qwen3.py  simple_test.py  start_service.py  test_concurrency.py  test_direct_mode.py  (+1 more)
embedding_api/: __init__.py  main.py
